--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -27,7 +27,7 @@ jobs:
         run: ls -la
 
       - name: Run script
-        run: python KW.py  # Zakładam, że Twój skrypt nazywa się KW.py, bo tak jest w logach
+        run: python KW.py  # Nazwa Twojego skryptu
 
       - name: List files after running script
         run: ls -la
@@ -36,8 +36,11 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
-          git add output.txt errors.log proxy_errors.log || true  # Ignoruje brakujące pliki
+          # Dodajemy tylko istniejące pliki
+          for file in output.txt errors.log proxy_errors.log; do
+            [ -f "$file" ] && git add "$file"
+          done
           git commit -m "Update results from script run" || echo "Nothing to commit"
-          git push
+          git push || echo "Push failed, but continuing"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
