--- a/settings.json
+++ b/settings.json
@@ -3,11 +3,11 @@
     "plik_wyjsciowy": "output.txt",
     "error_log": "errors.log",
     "proxy_error_log": "proxy_errors.log",
-    "workers": 2,
+    "workers": 1,
     "headless": true,
     "browser": "chromium",
     "browser_options": {
-        "proxy": false,
+        "proxy": true,
         "user_agent_list": [
             "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36",
             "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Safari/605.1.15"
